--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  align-items: center;
 }
 
 a {
@@ -9,4 +10,15 @@ a {
 
 h1 {
   color: 15px;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.title-container {
+  text-align: center;
+  margin-bottom: 20px;
+
 }
