--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,40 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div class="container text-center">
+    <div class="row justify-content-evenly">
+
+        <div class="col-12 col-md-5 col-xl-3 m-1">
+       <div class="card" style="width: 18rem;">
+            <h5 class="card-title mt-1">Web-Development</h5>
+            <img src="../images/teste.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+
+               <p class="description"> Some text about Web-Development here.</p>
+            </div>
+        </div>
+        </div>
+        <div class="col-12 col-md-5 col-xl-3 m-1">
+       <div class="card" style="width: 18rem;">
+            <h5 class="card-title mt-1">UX/UI-Design</h5>
+            <img src="../images/teste.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+
+                <p class="description"> Some text about UX/UI-Design here.</p>
+                
+            </div>
+        </div>
+        </div>
+
+        <div class="col-12 col-md-5 col-xl-3 m-1">
+       <div class="card" style="width: 18rem;">
+            <h5 class="card-title mt-1">Data analytics</h5>
+            <img src="../images/teste.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+
+                <p class="description"> Some text about Data Analytics  here.</p>
+                
+            </div>
+        </div>
+        </div>
+
+
+    </div>
+</div>
