--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,13 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   </head>
 
   <body>
 
-    {{{body}}}
+    <nav class="navbar navbar-expand-lg bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Web-Dev</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">UX/UI-Design</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Data Analytics</a>
+        </li>  
+      </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#">LOGO HERE</a>
+        </li> 
+      </ul>
+      
+      <form class="d-flex" role="search">
+        
+        <a href="/Login">
+            <button class="btn btn-primary btn-lg mt-3">Login</button>
+            </a>
+      </form>
+    </div>
+  </div>
+</nav>
+<main>
 
-    <script src="/js/script.js"></script>
+ {{{body}}}
+
+</main>
+
+<div class="footer">
+  <p>Created by the Gang</p>
+</div>
+
+  <script src="/js/script.js"</script>
   </body>
 
 </html>
