--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,7 @@
       
       <form class="d-flex" role="search">
         
-        <a href="/Login">
+        <a href="/login">
             <button class="btn btn-primary btn-lg mt-3">Login</button>
             </a>
       </form>
