--- a/views/web-dev.hbs
+++ b/views/web-dev.hbs
@@ -16,7 +16,14 @@
                     card's content.</p>
                 <a href="#" class="btn btn-primary mb-1">Go somewhere</a>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
-                <p class="card-text mt-1">Created by: Developer</p>
+                <p class="card-text mt-1">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
     </div>
