create and edit

--- a/views/add-project.hbs
+++ b/views/add-project.hbs
@@ -7,12 +7,12 @@
       <label for="name" class="form-label">Project Name:</label>
       <input type="text" class="form-control" name="name">
     </div>
-    <label for="name" class="form-label">Choose your course:</label>
-    <select class="form-select form-select-md-6 mb-3" aria-label="Choose your course">
+    <label for="course" class="form-label">Choose your course:</label>
+    <select name="course" class="form-select form-select-md-6 mb-3" aria-label="Choose your course">
       <option selected></option>
-      <option value="1">Web Development</option>
-      <option value="2">Data Analitcs</option>
-      <option value="3">UX UI</option>
+      <option value="Web Development">Web Development</option>
+      <option value="Data Analitcs">Data Analitcs</option>
+      <option value="UX UI">UX UI</option>
     </select>
     <div class="col-md-6 mb-3">
       <label for="website" class="form-label">Website URL:</label>
