changed routes with user stuff, added signup button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,20 +18,12 @@
 
     <nav class='navbar navbar-expand-lg bg-dark'>
       <div class='container-fluid'>
-        <a class='navbar-brand' href='/'>Home</a>
-        <button
-          class='navbar-toggler'
-          type='button'
-          data-bs-toggle='collapse'
-          data-bs-target='#navbarSupportedContent'
-          aria-controls='navbarSupportedContent'
-          aria-expanded='false'
-          aria-label='Toggle navigation'
-        >
-          <span class='navbar-toggler-icon'></span>
-        </button>
+        
         <div class='collapse navbar-collapse' id='navbarSupportedContent'>
           <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
+            <li class='nav-item'>
+              <a class='nav-link' aria-current='page' href='/'>Home</a>
+            </li>
             <li class='nav-item'>
               <a class='nav-link' aria-current='page' href='/webdev'>Web-Dev</a>
             </li>
@@ -42,11 +34,15 @@
               <a class='nav-link' href='/data'>Data Analytics</a>
             </li>
           </ul>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">LOGO HERE</a>
-        </li> 
-      </ul>
+         {{#if user}}
+          <a href="/profile">
+            <button class="btn btn-primary btn-lg mt-3">Profile</button>
+            </a>
+        {{else}}
+        <a href="/signup">
+            <button class="btn btn-primary btn-lg mt-3">Signup</button>
+            </a>
+        {{/if}}
 
       
          {{#if user}}
