--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,8 +3,9 @@
     <h1 class='text-center mt-5'>Welcome "USERNAME COMES HERE"</h1>
     <!-- <H2>{{user.name}}</H2> -->
     <div class='d-grid mt-3'>
+       <a href="/project/create">
       <button class='btn btn-primary col-6' type='button'>Add a project</button>
-
+       </a>
     </div>
   </div>
 </div>
