--- a/views/data-analytics.hbs
+++ b/views/data-analytics.hbs
@@ -1,6 +1,11 @@
 <div class="title-container">
     <h1>Data Analytics</h1>
-    <h5>Search Engine</h5>
+    <div class=" justify-content-center">
+   <form  role="search">
+        <input class="form-control-sm" type="search" placeholder="Search for a project" aria-label="Search">
+        <button  type="submit">Search</button>
+      </form>
+</div>
 </div>
 
 {{#each project}}
