--- a/views/uidesign.hbs
+++ b/views/uidesign.hbs
@@ -1,6 +1,11 @@
 <div class="title-container">
     <h1>UX / UI</h1>
-    <h5>Search Engine</h5>
+  <div class=" justify-content-evenly">
+     <form  role="search">
+        <input class="form-control-sm" type="search" placeholder="Search for a project" aria-label="Search">
+        <button  type="submit">Search</button>
+    </form>
+ </div>
 </div>
 
 {{#each project}}
