--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,19 +13,16 @@
       crossorigin='anonymous'
     />
   </head>
-
   <body>
-
-    <nav class='navbar navbar-expand-lg bg-dark'>
+ <nav class='navbar navbar-expand-lg bg-dark'>
       <div class='container-fluid'>
-        
-        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+       <div class='collapse navbar-collapse' id='navbarSupportedContent'>
           <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
             <li class='nav-item'>
-              <a class='nav-link' aria-current='page' href='/'>Home</a>
+              <a class='nav-link'  href='/'>Home</a>
             </li>
             <li class='nav-item'>
-              <a class='nav-link' aria-current='page' href='/webdev'>Web-Dev</a>
+              <a class='nav-link'  href='/webdev'>Web-Dev</a>
             </li>
             <li class='nav-item'>
               <a class='nav-link' href='/uidesign'>UX/UI-Design</a>
@@ -33,64 +30,41 @@
             <li class='nav-item'>
               <a class='nav-link' href='/data'>Data Analytics</a>
             </li>
-          </ul>
+            </ul>
          {{#if user}}
-          <a href="/profile">
-            <button class="btn btn-primary btn-lg mt-3">Profile</button>
-            </a>
+         <ul class='navbar-nav  mb-2 mb-lg-0'>
+         <li class='nav-item'>
+              <a class='nav-link'  href='/profile'>Profile</a>
+            </li>
         {{else}}
-        <a href="/signup">
-            <button class="btn btn-primary btn-lg mt-3">Signup</button>
-            </a>
+        <li class='nav-item'>
+              <a class='nav-link'  href='/signup'>Signup</a>
+            </li>
         {{/if}}
-
-      
-         {{#if user}}
-          <a href="/logout">
-            <button class="btn btn-primary btn-lg mt-3">Logout</button>
-            </a>
+        {{#if user}}
+          <li class='nav-item'>
+              <a class='nav-link'  href='/logout'>Logout</a>
+            </li>
         {{else}}
-        <a href="/login">
-            <button class="btn btn-primary btn-lg mt-3">Login</button>
-            </a>
+        <li class='nav-item'>
+              <a class='nav-link'  href='/login'>Login</a>
+            </li>
         {{/if}}
-
-
-
-
-
-
-
-        
-
+         </ul>
     </div>
   </div>
 </nav>
 <main>
-
-         
-            
-          
-        </div>
-      </div>
-    </nav>
-    <main>
-
       {{{body}}}
-
-    </main>
-
-    <div class='footer'>
-      <p>Created by the Gang</p>
-    </div>
-
-    <script
+</main>
+<div class='footer'>
+      <a class = "footer-text">Created by the gang</a>     
+</div>
+ <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js'
       integrity='sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3'
       crossorigin='anonymous'
     ></script>
     <script src='/js/script.js'></script>
-
-  </body>
-
+</body>
 </html>
