--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
  <nav class='navbar navbar-expand-lg bg-dark'>
       <div class='container-fluid'>
        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-          <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
+          <ul class='navbar-nav me-auto mb-2 mb-lg-1'>
             <li class='nav-item'>
               <a class='nav-link'  href='/'>Home</a>
             </li>
@@ -31,8 +31,9 @@
               <a class='nav-link' href='/data'>Data Analytics</a>
             </li>
             </ul>
+            <ul class='navbar-nav mb-2 mb-lg-0'>
          {{#if user}}
-         <ul class='navbar-nav  mb-2 mb-lg-0'>
+         
          <li class='nav-item'>
               <a class='nav-link'  href='/profile'>Profile</a>
             </li>
@@ -58,7 +59,7 @@
       {{{body}}}
 </main>
 <div class='footer'>
-      <a class = "footer-text">Created by the gang</a>     
+      <p class = "footer-text">Created by the gang</p>     
 </div>
  <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js'
