--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,10 +1,10 @@
-<div class='d-flex justify-content-center'>
-  <div class='info'>
-    <h1 class='text-center mt-5'>Welcome "USERNAME COMES HERE"</h1>
+<div class='container'>
+  <div class='col text-center'>
+    <h1 class='text-center mt-5'>Welcome {{user.username}}</h1>
     <!-- <H2>{{user.name}}</H2> -->
     <div class='d-grid mt-3'>
        <a href="/project/create">
-      <button class='btn btn-primary col-6' type='button'>Add a project</button>
+      <button class='btn btn-primary col-2' type='button'>Add a project</button>
        </a>
     </div>
   </div>
