--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,7 +48,7 @@ img {
     color: #f2f2f2; }
   .navbar .navbar-nav .nav-link:hover {
     color: #f2f2f2;
-    background-color: #cf000070; }
+    color: #cf000070; }
   .navbar .nav-item .dropdown,
   .navbar .dropdown:hover {
     color: #f2f2f2; }
