--- a/views/web-dev.hbs
+++ b/views/web-dev.hbs
@@ -20,7 +20,8 @@
                         <a href="{{url_website}}" target="_blank" class="btn btn-primary mb-1">{{url_website}}</a>
                         <a href="{{url_github}}" target="_blank" class="btn btn-primary">{{url_github}}</a>
                         <p class="card-text mt-1">Created by: {{user.name}}</p>
-                        <a href="/project/{{_id}}/edit">Edit {{name}}</a>
+                        <a href="/project/{{_id}}/edit">Edit Project</a>
+                        <a href="/project/{{_id}}/delete">Delete</a>
                     </div>
                 </div>
             </div>
