--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,5 +37,41 @@
         </a>
         </div>
         
+        <div class="col-12 col-md-5 col-xl-3 m-1">
+            <a class="nav-link " href='/uidesign'>
+       <div class="card border-0" style="width: 18rem;">
+            <h5 class="card-title mt-1">UX/UI-Design</h5>
+            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+                <p class="description"> Some text about UX/UI-Design here.</p>
+                </div>
+        </div>
+        </a>
+        </div>
+
+<div class="col-12 col-md-5 col-xl-3 m-1">
+            <a class="nav-link " href='/uidesign'>
+       <div class="card border-0" style="width: 18rem;">
+            <h5 class="card-title mt-1">UX/UI-Design</h5>
+            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+                <p class="description"> Some text about UX/UI-Design here.</p>
+                </div>
+        </div>
+        </a>
+        </div>
+
+<div class="col-12 col-md-5 col-xl-3 m-1">
+            <a class="nav-link " href='/uidesign'>
+       <div class="card border-0" style="width: 18rem;">
+            <h5 class="card-title mt-1">UX/UI-Design</h5>
+            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+            <div class="card-body">
+                <p class="description"> Some text about UX/UI-Design here.</p>
+                </div>
+        </div>
+        </a>
+        </div>
+
     </div>
 </div>
