--- a/views/add-project.hbs
+++ b/views/add-project.hbs
@@ -1,7 +1,7 @@
 <h1>Add a New Project!</h1>
 
 <hr />
-<form action="/project/create" method="post">
+<form action="/project/create" method="post" enctype="multipart/form-data">
   <div class="d-flex flex-column">
     <div class="col-md-6 mb-3">
       <label for="name" class="form-label">Project Name:</label>
