--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -14,7 +14,7 @@
 <div class='col-12 col-md-5 col-xl-3 m-1 text-center'>
   <div class='card' style='width: 18rem;'>
     <h5 class='card-title mt-1'>Project Name</h5>
-    <img src='../images/teste.jpg' class='card-img-top' alt='...' />
+    <img src={{image}} class='card-img-top' alt='...' />
     <div class='card-body'>
 
       <p class='description'> Project Description</p>
