--- a/views/data-analytics.hbs
+++ b/views/data-analytics.hbs
@@ -14,7 +14,7 @@
             <div class="col-12 col-md-5 col-xl-3 m-1">
                 <div class="card" style="width: 18rem;">
                     <h5 class="card-title mt-1">{{name}}</h5>
-                    <img src="../public/images/teste.jpg" class="card-img-top">
+                    <img src={{image}} class="card-img-top">
                     <div class="card-body">
                         <p class="card-text">{{description}}</p>
                         <a href="{{url_website}}" target="_blank" class="btn btn-primary mb-1">{{url_website}}</a>
