just update things

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,18 @@
-<div class="container text-center ">
-    <div class="row justify-content-evenly">
+<div class ="header text-center">
+    <h1>Welcome</h1>
+    <div class="container text-center">
+        <div class="col-12 col-md-6 col-lg-4  mx-auto d-block">
+    <img src="../images/teste.jpg" class="card-img-top rounded-circle mx-auto d-block" alt="...">
+    </div></div>
+    <p class="description"> Some text about UX/UI-Design here.</p>
+</div>
 
+
+<div class="container text-center ">  
+    <div class="row justify-content-evenly ">
         <div class="col-12 col-md-5 col-xl-3 m-1">
             <a class="nav-link " href='/webdev'>
-       <div class="card border-0" style="width: 18rem;">
+       <div class="card " style="width: 18rem;">
             <h5 class="card-title mt-1">Web-Development</h5>
             <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
             <div class="card-body">
@@ -39,7 +48,7 @@
         
         <div class="col-12 col-md-5 col-xl-3 m-1">
             <a class="nav-link " href='/uidesign'>
-       <div class="card border-0" style="width: 18rem;">
+       <div class="card " style="width: 18rem;">
             <h5 class="card-title mt-1">UX/UI-Design</h5>
             <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
             <div class="card-body">
@@ -51,7 +60,7 @@
 
 <div class="col-12 col-md-5 col-xl-3 m-1">
             <a class="nav-link " href='/uidesign'>
-       <div class="card border-0" style="width: 18rem;">
+       <div class="card " style="width: 18rem;">
             <h5 class="card-title mt-1">UX/UI-Design</h5>
             <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
             <div class="card-body">
