--- a/views/add-project.hbs
+++ b/views/add-project.hbs
@@ -23,7 +23,7 @@
       <input type="text" class="form-control" name="url_github">
     </div>
     <div class="mb-3">
-      <label for="description" class="form-label">Description:</label>
+      <label for="description"  maxlength="10" class="form-label">Description:</label>
       <textarea class="form-control" name="description" rows="3"></textarea>
     </div>
     <div class="mb-3">
