--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,7 +48,7 @@
             </li>
         {{else}}
         <li class='nav-item'>
-              <a class='nav-link' href="/login" data-bs-toggle="modal" data-bs-target="#modalLoginForm">Login</a>
+              <a class='nav-link'  href='/login'>Login</a>
             </li>
         {{/if}}
          </ul>
