--- a/views/add-project.hbs
+++ b/views/add-project.hbs
@@ -11,7 +11,7 @@
     <select name="course" class="form-select form-select-md-6 mb-3" aria-label="Choose your course">
       <option selected></option>
       <option value="Web Development">Web Development</option>
-      <option value="Data Analitcs">Data Analitcs</option>
+      <option value="Data Analytics">Data Analytics</option>
       <option value="UX UI">UX UI</option>
     </select>
     <div class="col-md-6 mb-3">
