--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,8 +13,8 @@
       crossorigin='anonymous'
     />
   </head>
-  <body>
- <nav class='navbar navbar-expand-lg bg-dark'>
+  <body class="bg-light">
+ <nav class='navbar navbar-expand-lg bg-white border-bottom'>
       <div class='container-fluid'>
        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
           <ul class='navbar-nav me-auto mb-2 mb-lg-1'>
