add modals, animation

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,86 +1,92 @@
-<div class ="header text-center">
-    <h1>Welcome</h1>
-    <div class="container text-center">
-        <div class="col-12 col-md-6 col-lg-4  mx-auto d-block">
-    <img src="../images/teste.jpg" class="card-img-top rounded-circle mx-auto d-block" alt="...">
-    </div></div>
-    <p class="description"> Some text about UX/UI-Design here.</p>
-</div>
-
-
-<div class="container text-center ">  
-    <div class="row justify-content-evenly ">
-        <div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/webdev'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">Web-Development</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-
-               <p class="description"> Some text about Web-Development here.</p>
-            </div>
-        </div>
-        </a>
-        </div>
-        <div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
-        <div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/data'>
-       <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">Data analytics</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-    <p class="description"> Some text about Data Analytics  here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-        
-        <div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
-<div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
-<div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
+<div class='container text-center'>
+  <div class='row'>
+    <div class='col-4'>
+      <img
+        src='../images/teste.jpg'
+        class='card-img-top rounded-circle mx-auto d-block'
+        alt='...'
+      />
     </div>
+    <div class='col-8'>
+      <p class='m-5'>
+        "NAME OF PROJECT" was made by "LIST OF NAMES" to have an Online platform
+        where Ironhack students from all courses can present and share their
+        various projects created during the bootcamp.</p>
+    </div>
+  </div>
 </div>
+
+<!--
+<div class="clearfix ">
+  <img src="../images/teste.jpg" class="col-md-3 float-md-start mb-3 ms-md-3" alt="...">
+<p > "NAME OF PROJECT" was made by "LIST OF NAMES" to have an Online platform where
+ Ironhack students from all courses can present and share their various projects created during the bootcamp.</p>
+  <p>
+    A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+  </p>
+
+  <p>
+    As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with some actual content in here, rather than just this boring placeholder text that goes on and on, but actually conveys no tangible information at. It simply takes up space and should not really be read.
+  </p>
+
+  <p>
+    And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+  </p>
+</div> -->
+<div class='container text-center'>
+  <div class='row justify-content-evenly'>
+    <div class='col-12 col-md-5 col-xl-3 m-1'>
+      <a class='nav-link' href='/webdev'>
+        <div class='card border-0' style='width: 18rem;'>
+          <h5 class='card-title mt-1'>Web-Development</h5>
+          <img
+            src='../images/teste.jpg'
+            class='card-img-top rounded-circle'
+            alt='...'
+          />
+          <div class='card-body'>
+
+            <p class='description'> Some text about Web-Development here.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class='col-12 col-md-5 col-xl-3 m-1'>
+      <a class='nav-link' href='/uidesign'>
+        <div class='card border-0' style='width: 18rem;'>
+          <h5 class='card-title mt-1'>UX/UI-Design</h5>
+          <img
+            src='../images/teste.jpg'
+            class='card-img-top rounded-circle'
+            alt='...'
+          />
+          <div class='card-body'>
+            <p class='description'> Some text about UX/UI-Design here.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class='col-12 col-md-5 col-xl-3 m-1'>
+      <a class='nav-link' href='/data'>
+        <div class='card border-0' style='width: 18rem;'>
+          <h5 class='card-title mt-1'>Data analytics</h5>
+          <img
+            src='../images/teste.jpg'
+            class='card-img-top rounded-circle'
+            alt='...'
+          />
+          <div class='card-body'>
+            <p class='description'> Some text about Data Analytics here.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+  </div>
+</div>
+{{#if errorMessage}}
+  <div class='alert alert-primary' role='alert'>
+    {{errorMessage}}
+  </div>
+{{/if}}
