--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,31 @@ a {
   color: #00b7ff;
 }
 
+.alert {
+  width:100%;
+  height:500px;
+  position: relative;
+  opacity: 0;
+  background-color: black !important;
+  color:white !important;
+  animation: animationName 5s ;
+  text-align:center;
+  }
+  
+  @keyframes animationName{
+    0% {
+      margin-top: 100px;
+      
+      opacity: 1;
+    }
+    
+    100% {
+      margin-top: -30px;
+      opacity: 0.8 ;
+    }
+  }
+
+
 
 h1 {
   color: 15px;
