--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,4 +1,4 @@
-<div id="login-form">
+<!-- <div id="login-form">
   <h2>Log In</h2>
   <form action="/login" method="POST">
 
@@ -22,3 +22,5 @@
     {{/if}}
   </form>
 </div>
+
+-->
