--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<div id="form">
+<!-- <div id="form">
   <h2>Sign Up</h2>
   <form action="/signup" method="POST">
 
@@ -22,3 +22,5 @@
     {{/if}}
   </form>
 </div>
+
+-->
