--- a/views/add-project.hbs
+++ b/views/add-project.hbs
@@ -7,6 +7,14 @@
       <label for="name" class="form-label">Project Name:</label>
       <input type="text" class="form-control" name="name">
     </div>
+    <div class="col-md-6 mb-3">
+      <label for="website" class="form-label">Website / Figma / Kaggle URL:</label>
+      <input type="text" class="form-control" name="url_website">
+    </div>
+    <div class="col-md-6 mb-3">
+      <label for="github" class="form-label">GitHub URL:</label>
+      <input type="text" class="form-control" name="url_github">
+    </div>
     <label for="course" class="form-label">Choose your course:</label>
     <select name="course" class="form-select form-select-md-6 mb-3" aria-label="Choose your course">
       <option selected></option>
@@ -14,14 +22,6 @@
       <option value="Data Analytics">Data Analytics</option>
       <option value="UX UI">UX UI</option>
     </select>
-    <div class="col-md-6 mb-3">
-      <label for="website" class="form-label">Website URL:</label>
-      <input type="text" class="form-control" name="url_website">
-    </div>
-    <div class="col-md-6 mb-3">
-      <label for="github" class="form-label">GitHub URL:</label>
-      <input type="text" class="form-control" name="url_github">
-    </div>
     <div class="mb-3">
       <label for="description"  maxlength="10" class="form-label">Description:</label>
       <textarea class="form-control" name="description" rows="3"></textarea>
