--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,86 +1,51 @@
-<div class ="header text-center">
-    <h1>Welcome</h1>
-    <div class="container text-center">
-        <div class="col-12 col-md-6 col-lg-4  mx-auto d-block">
-    <img src="../images/teste.jpg" class="card-img-top rounded-circle mx-auto d-block" alt="...">
-    </div></div>
-    <p class="description"> Some text about UX/UI-Design here.</p>
-</div>
+  <div class='d-flex justify-content-evenly mt-5 mb-5'>
+    <div class='col-4'>
+            <img src="../images/logo.png" class="card-img-top mx-auto d-block " alt="Logo">
+     </div>
+     <div class="col-5 initial">      
+             <p class="mt-4 pl-5 justify">The Projects Library is a collection of project plans and documentation that can be used by future students as a resource for ideas and inspiration. The library is organized into three sections: UX/UI, Web Development, and Data Analytics. Each section contains a variety of projects that have been created by current and past students! </p>
+    </div>    
+    </div>
 
 
-<div class="container text-center ">  
+
+<div class="container text-center mt-5">  
     <div class="row justify-content-evenly ">
-        <div class="col-12 col-md-5 col-xl-3 m-1">
+        <div class="col-sm-12 col-md-6 col-xl-3 m-1 card mb-5">
             <a class="nav-link " href='/webdev'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">Web-Development</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+       <div class="card border-0" style="width: 18rem;">
+            <h5 class="card-title m-3">Web-Development</h5>
+            <img src="../images/dev.webp" class="card-img-top card-img" alt="...">
             <div class="card-body">
 
-               <p class="description"> Some text about Web-Development here.</p>
+               <p class="justify text-center"> The Web Development section contains projects that focus on the development of web applications. This section includes both front-end and back-end development projects. Projects in this section range from simple HTML/CSS websites to complex database-driven applications.
+</p>
             </div>
         </div>
         </a>
         </div>
-        <div class="col-12 col-md-5 col-xl-3 m-1">
+        <div class="col-sm-12 col-md-6 col-xl-3 m-1 card mb-5">
             <a class="nav-link " href='/uidesign'>
        <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+            <h5 class="card-title m-3">UX/UI-Design</h5>
+            <img src="../images/ui.jpg" class="card-img-top card-img" alt="...">
             <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
+                <p class="justify text-center"> The UX/UI section contains projects that focus on user experience and interface design. This section includes both traditional web applications and more modern mobile applications. Projects in this section range from simple wireframes to complete redesigns of existing products.</p>
                 </div>
         </div>
         </a>
         </div>
 
-        <div class="col-12 col-md-5 col-xl-3 m-1">
+        <div class="col-sm-12 col-md-6 col-xl-3 m-1 card mb-5">
             <a class="nav-link " href='/data'>
        <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">Data analytics</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
+            <h5 class="card-title m-3">Data analytics</h5>
+            <img src="../images/data.jpeg" class="card-img-top card-img" alt="...">
             <div class="card-body">
-    <p class="description"> Some text about Data Analytics  here.</p>
+    <p class="justify text-center"> The Data Analytics section contains projects that focus on data analysis and visualization. This section includes both static and interactive data visualizations. Projects in this section range from simple bar charts to complex multi-dimensional data visualizations.</p>
                 </div>
         </div>
         </a>
         </div>
-        
-        <div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
-<div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card " style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
-<div class="col-12 col-md-5 col-xl-3 m-1">
-            <a class="nav-link " href='/uidesign'>
-       <div class="card border-0" style="width: 18rem;">
-            <h5 class="card-title mt-1">UX/UI-Design</h5>
-            <img src="../images/teste.jpg" class="card-img-top rounded-circle" alt="...">
-            <div class="card-body">
-                <p class="description"> Some text about UX/UI-Design here.</p>
-                </div>
-        </div>
-        </a>
-        </div>
-
     </div>
 </div>
