--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,11 +22,10 @@ h1 {
   width: 100%;
   height:5%;
   text-align: center;
-  background-color:black;
 }
 
 .footer-text{
-  color:white;
+  color: black;
   text-decoration: none;
 }
 
@@ -64,20 +63,27 @@ img {
     .navbar .dropdown-menu .dropdown-item:hover {
       background-color: blue; 
       }
-
-.card-img {
-  width: 100% !important;
-  height: 100px !important;
+.justify {
+  text-align: justify !important;
+  font-family: 'Raleway', sans-serif;
 }
 
+.card-img {
+  width: 300px !important;
+  height: 200px !important;
+}
+
+.initial {
+  width: 600px !important;
+}
 .contain {
   object-fit: contain !important;
 }
 
 .description {
   overflow: auto !important;
-  width: 200px !important;
-  height: 100px !important;
+  width: 240px !important;
+  height: 70px !important;
 }
 
 .btnconect {
