--- a/views/data-analytics.hbs
+++ b/views/data-analytics.hbs
@@ -1,29 +1,5 @@
-<div class="title-container">
-    <h1>Data Analytics</h1>
-    <div class=" justify-content-center">
-   <form  role="search">
-        <input class="form-control-sm" type="search" placeholder="Search for a project" aria-label="Search">
-        <button  type="submit">Search</button>
-      </form>
-</div>
-</div>
+<h1 class="mb-5 mt-4 title-container">Data Analytics</h1>
+ 
+ {{>projectspartial}}
 
-{{#each project}}
-    <div class="container text-center">
-        <div class="row justify-content-evenly">
-            <div class="col-12 col-md-5 col-xl-3 m-1">
-                <div class="card" style="width: 18rem;">
-                    <h5 class="card-title mt-1">{{name}}</h5>
-                    <img src={{image}} class="card-img-top">
-                    <div class="card-body">
-                        <p class="card-text">{{description}}</p>
-                        <a href="{{url_website}}" target="_blank" class="btn btn-primary mb-1">{{url_website}}</a>
-                        <a href="{{url_website}}" target="_blank" class="btn btn-primary">{{url_website}}</a>
-                        <p class="card-text mt-1">Created by: </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{{/each}}
-       
+
