--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -7,6 +7,14 @@
       <label for="name" class="form-label">Project Name:</label>
       <input type="text" class="form-control" name="name" value={{name}}>
     </div>
+    <div class="col-md-6 mb-3">
+      <label for="website" class="form-label">Website / Figma / Kaggle URL:</label>
+      <input type="text" class="form-control" name="url_website" value={{url_website}}>
+    </div>
+    <div class="col-md-6 mb-3">
+      <label for="github" class="form-label">GitHub URL:</label>
+      <input type="text" class="form-control" name="url_github" value={{url_github}}>
+    </div>
     <label for="name" class="form-label">Choose your course:</label>
     <select class="form-select form-select-md-6 mb-3" aria-label="Choose your course" name="course">
       <option selected></option>
@@ -14,14 +22,6 @@
       <option value="Data Analytics" name="{{course}}">Data Analytics</option>
       <option value="UX UI" name="{{course}}">UX UI</option>
     </select>
-    <div class="col-md-6 mb-3">
-      <label for="website" class="form-label">Website URL:</label>
-      <input type="text" class="form-control" name="url_website" value={{url_website}}>
-    </div>
-    <div class="col-md-6 mb-3">
-      <label for="github" class="form-label">GitHub URL:</label>
-      <input type="text" class="form-control" name="url_github" value={{url_github}}>
-    </div>
     <div class="mb-3">
       <label for="description" class="form-label">Description:</label>
       <textarea class="form-control" name="description" rows="3" >{{description}}</textarea>
