--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,9 @@
       integrity='sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi'
       crossorigin='anonymous'
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body class="bg-light">
  <nav class='navbar navbar-expand-lg bg-white border-bottom'>
@@ -55,16 +58,11 @@
     </div>
   </div>
 </nav>
-<!-- {> loginpartial}
-<div class="text-center">
-  <a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalLoginForm">Launch
-    Modal Login Form</a>
-</div> -->
 <main>
       {{{body}}}
 </main>
-<div class='footer'>
-      <p class = "footer-text">Created by the gang</p>     
+<div class='footer bg-light'>
+      <p class = "mt-1 footer-text">Created by Guilherme, Ioannis and Jakob</p>     
 </div>
  <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js'
