--- a/views/uidesign.hbs
+++ b/views/uidesign.hbs
@@ -1,28 +1,4 @@
-<div class="title-container">
-    <h1>UX / UI</h1>
-  <div class=" justify-content-evenly">
-     <form  role="search">
-        <input class="form-control-sm" type="search" placeholder="Search for a project" aria-label="Search">
-        <button  type="submit">Search</button>
-    </form>
- </div>
-</div>
 
-{{#each project}}
-    <div class="container text-center">
-        <div class="row justify-content-evenly">
-            <div class="col-12 col-md-5 col-xl-3 m-1">
-                <div class="card" style="width: 18rem;">
-                    <h5 class="card-title mt-1">{{name}}</h5>
-                    <img src="../public/images/teste.jpg" class="card-img-top">
-                    <div class="card-body">
-                        <p class="card-text">{{description}}</p>
-                        <a href={{url_website}} target="_blank" class="btn btn-primary mb-1">{{url_website}}</a>
-                        <a href={{url_github}} target="_blank" class="btn btn-primary">{{url_github}}</a>
-                        <p class="card-text mt-1">Created by: {{user.name}}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{{/each}}
+<h1 class="mb-5 mt-4 title-container">UX / UI</h1>
+  
+  {{>projectspartial}}
