--- a/views/web-dev.hbs
+++ b/views/web-dev.hbs
@@ -1,25 +1,3 @@
-<div class="title-container">
-    <h1 class="mb-4 mt-4">Web Development</h1>
-    <div class=" justify-content-center">
-   <form  role="search">
-        <input class="form-control-sm mb-4" type="search" placeholder="Search for a project" aria-label="Search">
-        <button  type="submit">Search</button>
-      </form>
-</div>
-</div>
-<div class="container text-center">
-    <div class="row justify-content-evenly">
-{{#each project}}
-            <div class='col-sm-12 col-md-6 col-xl-3 m-1 card mb-5'>
-                    <h5 class="card-title mt-1">{{name}}</h5>
-                    <img src={{image}} class="card-img-top">
-                    <div class="card-body">
-                        <p class="card-text">{{description}}</p>
-                        <a href={{url_website}} target="_blank" class="btnconect btn btn-primary mb-1 text-wrap">{{url_website}}</a> <br>
-                        <a href={{url_github}} target="_blank" class="btnconect btn btn-primary text-wrap">{{url_github}}</a>
-                        <p class="card-text mt-1">Created by: {{User}}</p>
-                    </div>
-                </div>
-{{/each}}   
-        </div>
-    </div>
+<h1 class="mb-5 mt-4 title-container">Web Development</h1>
+ 
+ {{>projectspartial}}
