--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,8 +12,8 @@ a {
 
 .alert {
   width:100%;
-  height:500px;
-  position: relative;
+  height:150px;
+  position:relative;
   opacity: 0;
   background-color: black !important;
   color:white !important;
@@ -23,13 +23,13 @@ a {
   
   @keyframes animationName{
     0% {
-      margin-top: 100px;
-      
+      margin-top: 0vh;
       opacity: 1;
     }
     
-    100% {
-      margin-top: -30px;
+ 
+    60% {
+      margin-top: -20%;
       opacity: 0.8 ;
     }
   }
