--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,12 @@
   </head>
   <body class="bg-light">
  <nav class='navbar navbar-expand-lg bg-white border-bottom'>
+
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></button>
+
+
       <div class='container-fluid'>
+      
        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
           <ul class='navbar-nav me-auto mb-2 mb-lg-1'>
             <li class='nav-item'>
