--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,7 +53,7 @@
     <div class="modal-content">
       <form action="/signup" method="POST">
       <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
+        <h4 class="modal-title w-100 font-weight-bold">Register</h4>
         <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -78,7 +78,7 @@
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-default" type="submit">Submit</button>
+        <button class=" submit btn btn-default" type="submit">Submit</button>
       </div>
          {{#if errorMessage}}
          <div class="alertForm alert-primary" role="alert">
@@ -126,7 +126,7 @@
         </div>
           </div>
             <div class="modal-footer d-flex justify-content-center">
-              <button class="btn btn-default" type="submit">Submit</button>
+              <button class=" submit btn btn-default" type="submit">Submit</button>
             </div>
             {{#if errorMessage}}
          <div class="alertForm alert-primary" role="alert">
