--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
           <div class="modal open"  id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content justify text-center">
       <form action="/signup" method="POST">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Register</h4>
@@ -105,10 +105,10 @@
     <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content justify text-center">
       <form action="/login" method="POST">
         <div class="modal-header text-center">
-          <h4 class="modal-title w-100 font-weight-bold">Log in</h4>
+          <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
           <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
