--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta http-equiv='X-UA-Compatible' content='ie=edge' />
-    <title>{{appTitle}}</title>
+    <title>Iron Library</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css'
